testdata/baselines/reference/submodule/compiler/moduleResolutionWithSymlinks_withOutDir.errors.txt
/src/library-a/index.ts(1,32): error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
/src/library-b/index.ts(1,23): error TS2307: Cannot find module 'library-a' or its corresponding type declarations.


==== /src/app.ts (0 errors) ====
    import { MyClass } from "./library-a";
    import { MyClass2 } from "./library-b";
    
    let x: MyClass;
    let y: MyClass2;
    x = y;
    y = x;
    
==== /src/library-a/index.ts (1 errors) ====
    export class MyClass { private x: number; }
                                   ~
!!! error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
    
==== /src/library-b/index.ts (1 errors) ====
    import {MyClass} from "library-a";
                          ~~~~~~~~~~~
!!! error TS2307: Cannot find module 'library-a' or its corresponding type declarations.
    export { MyClass as MyClass2 }
    